<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Place-its</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="view_lists">View Reminders</string>
    <string name="regular_placeit">Create Regular PlaceIt</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="instruction">Please choose up to 3 categories!</string>
    <string name="placeit">Place It</string>
    <string name="categorical_placeit">Create Categorical PlaceIt</string>
    <string name="show_map" translatable="false">Show Map</string>
    <string name="create_placeit" translatable="false">Create Reminder</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="start_Date">Start Date</string>
    <string name="end_Date">End Date</string>
    <string name="list_of_locations">List of Locations</string>
    <string name="posted">Posted</string>
    <string name="pulled_down">Pulled-down</string>
    <string name="deleted">Deleted</string>
    
    <string name="search">Search</string>
    <string name="enter_Address">Enter address</string>
    
    <string name="add_geofences_result_success">
        Add Geofences: Success GeofenceRequestIds=%1$s
    </string>

    <string-array name="spinner_array">
        <item>Repeat weekly</item>
        <item>Repeat bi-weekly</item>
        <item>Repeat tri-weekly</item>
        <item>Repeat monthly</item>
        <item>Never Repeat</item>
    </string-array>
    
    <string-array name="categories_array">
        <item>Select a Category</item>
        <item>airport</item>
        <item>amusement_park</item>
        <item>aquarium</item>
        <item>art_gallery</item>
        <item>atm</item>
        <item>bakery</item>
        <item>bank</item>
        <item>bar</item>
		<item>beauty_salon</item>
		<item>bicycle_store</item>
		<item>book_store</item>
		<item>bowling_alley</item>
		<item>bus_station</item>
		<item>cafe</item>
		<item>campground</item>
		<item>car_dealer</item>
		<item>car_rental</item>
		<item>car_repair</item>
		<item>car_wash</item>
		<item>casino</item>
		<item>cemetery</item>
		<item>church</item>
		<item>city_hall</item>
		<item>clothing_store</item>
		<item>convenience_store</item>
		<item>courthouse</item>
		<item>dentist</item>
		<item>department_store</item>
		<item>doctor</item>
		<item>electrician</item>
		<item>electronics_store</item>
		<item>embassy</item>
		<item>establishment</item>
		<item>finance</item>
		<item>fire_station</item>
		<item>florist</item>
		<item>food</item>
		<item>funeral_home</item>
		<item>furniture_store</item>
		<item>gas_station</item>
		<item>general_contractor</item>
		<item>grocery_or_supermarket</item>
		<item>gym</item>
		<item>hair_care</item>
		<item>hardware_store</item>
		<item>health</item>
		<item>hindu_temple</item>
		<item>home_goods_store</item>
		<item>hospital</item>
		<item>insurance_agency</item>
		<item>jewelry_store</item>
		<item>laundry</item>
		<item>lawyer</item>
		<item>library</item>
		<item>liquor_store</item>
		<item>local_government_office</item>
		<item>locksmith</item>
		<item>lodging</item>
		<item>meal_delivery</item>
		<item>meal_takeaway</item>
		<item>mosque</item>
		<item>movie_rental</item>
		<item>movie_theater</item>
		<item>moving_company</item>
		<item>museum</item>
		<item>night_club</item>
		<item>painter</item>
		<item>park</item>
		<item>parking</item>
		<item>pet_store</item>
		<item>pharmacy</item>
		<item>physiotherapist</item>
		<item>place_of_worship</item>
		<item>plumber</item>
		<item>police</item>
		<item>post_office</item>
		<item>real_estate_agency</item>
		<item>restaurant</item>
		<item>roofing_contractor</item>
		<item>rv_park</item>
		<item>school</item>
		<item>shoe_store</item>
		<item>shopping_mall</item>
		<item>spa</item>
		<item>stadium</item>
		<item>storage</item>
		<item>store</item>
		<item>subway_station</item>
		<item>synagogue</item>
		<item>taxi_stand</item>
		<item>train_station</item>
		<item>travel_agency</item>
		<item>university</item>
		<item>veterinary_care</item>
		<item>zoo</item>
        
    </string-array>
</resources>
