<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="58dp"
        android:gravity="center"
        android:text="Place-its"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textSize="70dp"
        android:typeface="serif" />

    <Button
        android:id="@+id/ViewListsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_margin="5dp"
        android:background="@drawable/button"
        android:minHeight="35dp"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:text="@string/view_lists"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/CreatePlaceIts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/ViewListsButton"
        android:layout_margin="5dp"
        android:background="@drawable/button"
        android:fadingEdge="vertical"
        android:minHeight="35dp"
        android:padding="5dp"
        android:text="@string/create_placeit"
        android:textColor="@android:color/white" />
    
    <Button
        android:id="@+id/ShowMapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/CreatePlaceIts"
        android:layout_margin="5dp"
        android:background="@drawable/button"
        android:fadingEdge="vertical"
        android:minHeight="35dp"
        android:padding="5dp"
        android:text="@string/show_map"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/ShowMapButton"
        android:layout_margin="5dp"
        android:background="@drawable/button"
        android:fadingEdge="vertical"
        android:minHeight="35dp"
        android:padding="5dp"
        android:text="Login"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/LoggedInUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/textView1"
        android:layout_marginBottom="20dp"
        android:text="LoggedInUser"
        android:textColor="@android:color/white" />

</RelativeLayout>